--- a/Figure_Reproduce/3_ecPATH_plotting_oncogene_prediction_on_EGFR_model.ipynb
+++ b/Figure_Reproduce/3_ecPATH_plotting_oncogene_prediction_on_EGFR_model.ipynb
@@ -44,7 +44,7 @@
    ],
    "source": [
     "# Calculate the ROC and AUC for the combined data\n",
-    "all_predictions = pd.read_csv(f\"../plotting_data/{pred_oncogene}_predictions_using_EGFR_model_in_LGG_GBM_samples.csv\")\n",
+    "all_predictions = pd.read_csv(f\"../Data/Figure_Reproduce/{pred_oncogene}_predictions_using_EGFR_model_in_LGG_GBM_samples.csv\")\n",
     "y_true_combined = all_predictions.iloc[:, 1]  # Replace with the correct column if needed\n",
     "y_pred_combined = all_predictions['EGFR_model_predictions']\n",
     "\n",
